--- a/app/apps/release_notes/templates/beheer/release_note_list.html
+++ b/app/apps/release_notes/templates/beheer/release_note_list.html
@@ -20,7 +20,7 @@
                      xmlns="http://www.w3.org/2000/svg">
                     <path d="M9.15173 1.73256L7.73753 0.318359L1.44704 6.60885L1.4142 6.576L0 7.9902L1.4115 9.4017L1.37867 9.43453L7.67186 15.7277L9.08606 14.3135L3.7726 9.00006H24.0098V7.00006H3.88423L9.15173 1.73256Z" fill="#404B4F" />
                 </svg>
-                Beheer
+                <span>Beheer</span>
             </a>
         </div>
         <div class="container__flex">
@@ -91,7 +91,7 @@
                         <td>
                             <a href="{% url 'release_note_aanpassen' release_note.pk %}"
                                aria-label="Aanpassen"
-                               data-turbo="false">{% include "icons/edit.svg" %}</a>
+                               data-turbo="false">{% include "icons/edit2.svg" %}</a>
                         </td>
                         <td>
                             <a href="{% url 'release_note_verwijderen' release_note.pk %}"
