--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -143,6 +143,9 @@
         flex: 1;
     }
 
+    dl {
+        font-size: 0.778rem;
+    }
     .divider {
         border-top: 1px solid #ccc;
         margin: 20px 0;
