Styling zoom-in and close buttons

--- a/app/apps/main/templates/melding/detail/bijlagen.html
+++ b/app/apps/main/templates/melding/detail/bijlagen.html
@@ -50,5 +50,5 @@
             </div>
         {% endif %}
     </div>
-    {% include "icons/expand.svg" %}
+    <span>{% include "icons/expand.svg" %}</span>
 </section>
