--- a/app/frontend/assets/styles/components/_imageSlider.scss
+++ b/app/frontend/assets/styles/components/_imageSlider.scss
@@ -1,12 +1,22 @@
 .section--imageslider {
     position: relative;
-    > svg {
-        padding: 4px;
+    > span {
+        display: block;
+        width: 38px;
+        height: 38px;
         background-color: #fff;
         position: absolute;
         top: 30px;
-        right: 12px;
+        right: calc(1em + 12px);
         pointer-events: none;
+        border-radius: 4px;
+
+        svg {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate3d(-50%, -50%, 0);
+        }
     }
 
     section & {
