--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -359,6 +359,7 @@
         box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.25);
         display: none;
         opacity: 0;
+        font-size: 0.778rem;
         transition-property: opacity, display;
         transition-duration: $transition-duration-default;
         transition-timing-function: $transition-ease-default;
@@ -375,8 +376,8 @@
 
     .legenda-item {
         display: inline-block;
-        width: 24px;
-        height: 24px;
+        width: 16px;
+        height: 16px;
         background-color: #78b4ff;
         margin-right: $input-padding-y;
         vertical-align: bottom;
