CSSfixes enlarged map

--- a/app/apps/main/templates/melding/detail/kaart_modal_content.html
+++ b/app/apps/main/templates/melding/detail/kaart_modal_content.html
@@ -1,1 +1,1 @@
-<div class="container__kaart" data-modal-target="kaartLarge"></div>
+<div class="container__kaart container__map" data-modal-target="kaartLarge"></div>
