--- a/app/frontend/assets/styles/components/_block-taken.scss
+++ b/app/frontend/assets/styles/components/_block-taken.scss
@@ -215,6 +215,7 @@
 
     .container__thumbs {
         ul {
+            margin: 0;
             li {
                 cursor: auto;
                 margin: 0;
