Links to TaakR-info

--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -102,7 +102,7 @@
                                                                     <button class="btn btn-textlink btn-info"
                                                                             data-action="infosheet#openInfosheet"
                                                                             data-infosheet-action-param="{% url 'taaktype_taakr' %}?taakapplicatie-taaktype-url={{ taakr_taaktype_links.taakapplicatie_taaktype_url }}">
-                                                                        {% include "icons/info-filled.svg" %}
+                                                                        {% include "icons/info.svg" %}
                                                                     </button>
                                                                 </li>
                                                             {% endwith %}
