--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -339,7 +339,7 @@ textarea {
         }
 
         svg {
-            vertical-align: sub;
+            vertical-align: text-bottom;
         }
     }
 
