--- a/app/apps/main/templates/melding/detail/taken.html
+++ b/app/apps/main/templates/melding/detail/taken.html
@@ -2,6 +2,7 @@
 {% load gebruikersnaam gebruikersinitialen get_gebruiker_object_middels_email from gebruikers_tags %}
 {% load humanize %}
 {% load mor_core_url from main_tags %}
+{% load get from melding_tags %}
 
 {% if view.is_stream %}
 <turbo-stream target="melding_detail_taken" action="update">
@@ -23,12 +24,17 @@
                 </div>
             {% endif %}
             {% for taak in taken.alle_taken %}
-                {% with eerste_taakgebeurtenis=taak.taakgebeurtenissen_voor_taakopdracht|last laatste_taakgebeurtenis=taak.taakgebeurtenissen_voor_taakopdracht|first %}
+                {% with eerste_taakgebeurtenis=taak.taakgebeurtenissen_voor_taakopdracht|last laatste_taakgebeurtenis=taak.taakgebeurtenissen_voor_taakopdracht|first taakr_taaktype_links=taak|get:"_links" %}
                     <details class="container__taak">
                         <summary>
                             <div class="description">
                                 <p>
                                     {{ taak.titel }}
+                                    <button class="btn btn-textlink btn-info"
+                                            data-action="infosheet#openInfosheet"
+                                            data-infosheet-action-param="{% url 'taaktype_taakr' %}?taakapplicatie-taaktype-url={{ taakr_taaktype_links.taakapplicatie_taaktype_url }}">
+                                        {% include "icons/info.svg" %}
+                                    </button>
                                 </p>
                                 <small>{{ taak.verantwoordelijke_afdeling.naam }}</small>
                             </div>
