--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -88,7 +88,7 @@
             <div class="container__notification container__notification--toast"
                  id="toast_lijst"></div>
         {% endif %}
-        <div class="container__toplevel" data-modal-target="toplevelContainer">
+        <div class="container__toplevel" data-modal-target="toplevelContainer" data-infosheet-target="toplevelContainer">
             {% block aside %}
                 {% include "snippets/aside.html" %}
             {% endblock aside %}
