--- a/app/frontend/assets/styles/components/_block-taken.scss
+++ b/app/frontend/assets/styles/components/_block-taken.scss
@@ -281,4 +281,14 @@
             border-radius: 12px;
         }
     }
+
+    .status--stopped {
+        .spinner {
+            display: none;
+        }
+
+        span {
+            font-size: 0.667rem;
+        }
+    }
 }
