--- a/app/frontend/assets/styles/components/_details-list-with-map.scss
+++ b/app/frontend/assets/styles/components/_details-list-with-map.scss
@@ -27,6 +27,7 @@
                 font-size: 1;
                 summary {
                     padding: 0 40px 0 0;
+                    border-top: none;
                     h5 {
                         font-size: 0.778rem;
                         font-weight: 400;
@@ -55,6 +56,7 @@
                     summary {
                         h5 {
                             font-weight: 700;
+                            color: $green-900;
                         }
 
                         &::before {
