--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -1165,7 +1165,7 @@ form.taken-aanmaken {
             li {
                 display: flex;
                 flex: 0 1 47%;
-                justify-content: space-between;
+                justify-content: flex-start;
                 min-width: 47%;
                 margin: 0 0 0.5rem;
                 padding-left: 0;
