--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -797,6 +797,9 @@ body.no-js {
 .padding--bottom {
     padding-bottom: 1em !important;
 }
+.padding--top {
+    padding-top: 1em !important;
+}
 
 .padding--left {
     padding-left: 1em !important;
