--- a/app/frontend/assets/styles/components/_block-taken.scss
+++ b/app/frontend/assets/styles/components/_block-taken.scss
@@ -124,6 +124,7 @@
         flex-direction: column;
         align-items: flex-start;
         padding: 0.75rem 1rem;
+        min-height: 3.45em;
 
         .help-text {
             display: inline-block;
