--- a/app/frontend/assets/styles/components/_block-taken.scss
+++ b/app/frontend/assets/styles/components/_block-taken.scss
@@ -178,6 +178,10 @@
                 padding-right: 0;
             }
 
+            p {
+                word-break: break-word;
+            }
+
             h3 {
                 font-size: 0.778rem;
                 color: $green-900;
