--- a/app/frontend/assets/styles/components/_imageSlider.scss
+++ b/app/frontend/assets/styles/components/_imageSlider.scss
@@ -69,11 +69,12 @@
 
             img {
                 position: absolute;
-                top: 0;
+                top: 50%;
                 left: 50%;
-                transform: translateX(-50%);
+                transform: translate(-50%, -50%);
                 height: 100%;
                 width: auto;
+                max-width: 100%;
                 object-fit: contain;
             }
 
